kscr-compiler/KScr/Antlr/KScrParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.10.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:/dev/KScr/grammar\KScrParser.g4 by ANTLR 4.10.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace KScr.Antlr {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.10.1")]
[System.CLSCompliant(false)]
public partial class KScrParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		PACKAGE=1, IMPORT=2, PUBLIC=3, INTERNAL=4, PROTECTED=5, PRIVATE=6, STATIC=7, 
		FINAL=8, ABSTRACT=9, NATIVE=10, SYNCHRONIZED=11, CLASS=12, INTERFACE=13, 
		ENUM=14, ANNOTATION=15, EXTENDS=16, IMPLEMENTS=17, RETURN=18, THROW=19, 
		NEW=20, YIELD=21, IS=22, MARK=23, JUMP=24, IF=25, ELSE=26, FOR=27, FOREACH=28, 
		DO=29, WHILE=30, SWITCH=31, CASE=32, DEFAULT=33, BREAK=34, CONTINUE=35, 
		TRY=36, CATCH=37, FINALLY=38, OBJECT=39, ARRAYIDENT=40, TUPLEIDENT=41, 
		TYPE=42, NUMIDENT=43, BYTE=44, SHORT=45, INT=46, LONG=47, FLOAT=48, DOUBLE=49, 
		VOID=50, VAR=51, NUMLIT=52, STRLIT=53, STDIOLIT=54, ENDLLIT=55, NULL=56, 
		TRUE=57, FALSE=58, THIS=59, SUPER=60, GET=61, SET=62, INIT=63, LPAREN=64, 
		RPAREN=65, LBRACE=66, RBRACE=67, LSQUAR=68, RSQUAR=69, COLON=70, SEMICOLON=71, 
		DOT=72, COMMA=73, EXCLAMATION=74, QUESTION=75, SHORTELIPSES=76, ELIPSES=77, 
		TILDE=78, ESCAPE_QUOTE=79, QUOTE=80, AND=81, OR=82, PLUSPLUS=83, MINUSMINUS=84, 
		BITAND=85, BITOR=86, UP=87, STAR=88, SLASH=89, PLUS=90, MINUS=91, PERCENT=92, 
		AT=93, LSHIFT=94, RSHIFT=95, ULSHIFT=96, URSHIFT=97, EQUAL=98, INEQUAL=99, 
		GREATEREQ=100, LESSEREQ=101, GREATER=102, LESSER=103, ASSIGN=104, REQARROW=105, 
		LDASHARROW=106, RDASHARROW=107, LLDASHARROW=108, RRDASHARROW=109, RREQARROW=110, 
		ID=111, DIGIT=112, LETTER=113, SING_COMMENT=114, WS=115, UNMATCHED=116;
	public const int
		RULE_packageDecl = 0, RULE_imports = 1, RULE_importDecl = 2, RULE_annotationArg = 3, 
		RULE_annotation = 4, RULE_modifier = 5, RULE_modifiers = 6, RULE_classType = 7, 
		RULE_genericTypeUses = 8, RULE_type = 9, RULE_rawType = 10, RULE_genericTypeDef = 11, 
		RULE_genericTypeDefs = 12, RULE_objectExtends = 13, RULE_objectImplements = 14, 
		RULE_parameter = 15, RULE_parameters = 16, RULE_arguments = 17, RULE_statements = 18, 
		RULE_noBlock = 19, RULE_uniformBlock = 20, RULE_normalBlock = 21, RULE_memberExpr = 22, 
		RULE_lambdaBlock = 23, RULE_caseBlock = 24, RULE_memberBlock = 25, RULE_codeBlock = 26, 
		RULE_initDecl = 27, RULE_subConstructorCall = 28, RULE_subConstructorCalls = 29, 
		RULE_constructorDecl = 30, RULE_methodDecl = 31, RULE_indexerMemberDecl = 32, 
		RULE_propGetter = 33, RULE_propSetter = 34, RULE_propInit = 35, RULE_propBlock = 36, 
		RULE_propertyDecl = 37, RULE_member = 38, RULE_classDecl = 39, RULE_file = 40, 
		RULE_inferType = 41, RULE_indexerEmpty = 42, RULE_indexerDecl = 43, RULE_indexerExpr = 44, 
		RULE_cast = 45, RULE_declaration = 46, RULE_mutation = 47, RULE_call = 48, 
		RULE_ctorCall = 49, RULE_newArray = 50, RULE_newListedArray = 51, RULE_label = 52, 
		RULE_lambda = 53, RULE_returnStatement = 54, RULE_throwStatement = 55, 
		RULE_markStatement = 56, RULE_jumpStatement = 57, RULE_tryCatchStatement = 58, 
		RULE_tryWithResourcesStatement = 59, RULE_catchBlocks = 60, RULE_catchBlock = 61, 
		RULE_finallyBlock = 62, RULE_ifStatement = 63, RULE_elseStatement = 64, 
		RULE_whileStatement = 65, RULE_forStatement = 66, RULE_foreachStatement = 67, 
		RULE_doWhile = 68, RULE_switchStatement = 69, RULE_caseClause = 70, RULE_defaultClause = 71, 
		RULE_statement = 72, RULE_typedExpr = 73, RULE_expr = 74, RULE_tupleDeclType = 75, 
		RULE_tupleDecl = 76, RULE_tupleExpr = 77, RULE_binaryop = 78, RULE_binaryop_late = 79, 
		RULE_prefixop = 80, RULE_postfixop = 81, RULE_id = 82, RULE_idPart = 83, 
		RULE_array = 84, RULE_tuple = 85, RULE_num = 86, RULE_primitiveTypeLit = 87, 
		RULE_primitiveLit = 88;
	public static readonly string[] ruleNames = {
		"packageDecl", "imports", "importDecl", "annotationArg", "annotation", 
		"modifier", "modifiers", "classType", "genericTypeUses", "type", "rawType", 
		"genericTypeDef", "genericTypeDefs", "objectExtends", "objectImplements", 
		"parameter", "parameters", "arguments", "statements", "noBlock", "uniformBlock", 
		"normalBlock", "memberExpr", "lambdaBlock", "caseBlock", "memberBlock", 
		"codeBlock", "initDecl", "subConstructorCall", "subConstructorCalls", 
		"constructorDecl", "methodDecl", "indexerMemberDecl", "propGetter", "propSetter", 
		"propInit", "propBlock", "propertyDecl", "member", "classDecl", "file", 
		"inferType", "indexerEmpty", "indexerDecl", "indexerExpr", "cast", "declaration", 
		"mutation", "call", "ctorCall", "newArray", "newListedArray", "label", 
		"lambda", "returnStatement", "throwStatement", "markStatement", "jumpStatement", 
		"tryCatchStatement", "tryWithResourcesStatement", "catchBlocks", "catchBlock", 
		"finallyBlock", "ifStatement", "elseStatement", "whileStatement", "forStatement", 
		"foreachStatement", "doWhile", "switchStatement", "caseClause", "defaultClause", 
		"statement", "typedExpr", "expr", "tupleDeclType", "tupleDecl", "tupleExpr", 
		"binaryop", "binaryop_late", "prefixop", "postfixop", "id", "idPart", 
		"array", "tuple", "num", "primitiveTypeLit", "primitiveLit"
	};

	private static readonly string[] _LiteralNames = {
		null, "'package'", "'import'", "'public'", "'internal'", "'protected'", 
		"'private'", "'static'", "'final'", "'abstract'", "'native'", "'synchronized'", 
		"'class'", "'interface'", "'enum'", "'annotation'", "'extends'", "'implements'", 
		"'return'", "'throw'", "'new'", "'yield'", "'is'", "'mark'", "'jump'", 
		"'if'", "'else'", "'for'", "'foreach'", "'do'", "'while'", "'switch'", 
		"'case'", "'default'", "'break'", "'continue'", "'try'", "'catch'", "'finally'", 
		"'object'", "'array'", "'tuple'", "'type'", "'num'", "'byte'", "'short'", 
		"'int'", "'long'", "'float'", "'double'", "'void'", "'var'", null, null, 
		"'stdio'", "'endl'", "'null'", "'true'", "'false'", "'this'", "'super'", 
		"'get'", "'set'", "'init'", "'('", "')'", "'{'", "'}'", "'['", "']'", 
		"':'", "';'", "'.'", "','", "'!'", "'?'", "'..'", "'...'", "'~'", "'\\\"'", 
		"'\"'", "'&&'", "'||'", "'++'", "'--'", "'&'", "'|'", "'^'", "'*'", "'/'", 
		"'+'", "'-'", "'%'", "'@'", "'<<'", "'>>'", "'<<<'", "'>>>'", "'=='", 
		"'!='", "'>='", "'<='", "'>'", "'<'", "'='", "'=>'", "'<-'", "'->'", "'<<-'", 
		"'->>'", "'=>>'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "PACKAGE", "IMPORT", "PUBLIC", "INTERNAL", "PROTECTED", "PRIVATE", 
		"STATIC", "FINAL", "ABSTRACT", "NATIVE", "SYNCHRONIZED", "CLASS", "INTERFACE", 
		"ENUM", "ANNOTATION", "EXTENDS", "IMPLEMENTS", "RETURN", "THROW", "NEW", 
		"YIELD", "IS", "MARK", "JUMP", "IF", "ELSE", "FOR", "FOREACH", "DO", "WHILE", 
		"SWITCH", "CASE", "DEFAULT", "BREAK", "CONTINUE", "TRY", "CATCH", "FINALLY", 
		"OBJECT", "ARRAYIDENT", "TUPLEIDENT", "TYPE", "NUMIDENT", "BYTE", "SHORT", 
		"INT", "LONG", "FLOAT", "DOUBLE", "VOID", "VAR", "NUMLIT", "STRLIT", "STDIOLIT", 
		"ENDLLIT", "NULL", "TRUE", "FALSE", "THIS", "SUPER", "GET", "SET", "INIT", 
		"LPAREN", "RPAREN", "LBRACE", "RBRACE", "LSQUAR", "RSQUAR", "COLON", "SEMICOLON", 
		"DOT", "COMMA", "EXCLAMATION", "QUESTION", "SHORTELIPSES", "ELIPSES", 
		"TILDE", "ESCAPE_QUOTE", "QUOTE", "AND", "OR", "PLUSPLUS", "MINUSMINUS", 
		"BITAND", "BITOR", "UP", "STAR", "SLASH", "PLUS", "MINUS", "PERCENT", 
		"AT", "LSHIFT", "RSHIFT", "ULSHIFT", "URSHIFT", "EQUAL", "INEQUAL", "GREATEREQ", 
		"LESSEREQ", "GREATER", "LESSER", "ASSIGN", "REQARROW", "LDASHARROW", "RDASHARROW", 
		"LLDASHARROW", "RRDASHARROW", "RREQARROW", "ID", "DIGIT", "LETTER", "SING_COMMENT", 
		"WS", "UNMATCHED"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "KScrParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static KScrParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public KScrParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public KScrParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class PackageDeclContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PACKAGE() { return GetToken(KScrParser.PACKAGE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public IdContext id() {
			return GetRuleContext<IdContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMICOLON() { return GetToken(KScrParser.SEMICOLON, 0); }
		public PackageDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_packageDecl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IKScrParserListener typedListener = listener as IKScrParserListener;
			if (typedListener != null) typedListener.EnterPackageDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IKScrParserListener typedListener = listener as IKScrParserListener;
			if (typedListener != null) typedListener.ExitPackageDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKScrParserVisitor<TResult> typedVisitor = visitor as IKScrParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPackageDecl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PackageDeclContext packageDecl() {
		PackageDeclContext _localctx = new PackageDeclContext(Context, State);
		EnterRule(_localctx, 0, RULE_packageDecl);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 178;
			Match(PACKAGE);
			State = 179;
			id();
			State = 180;
			Match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ImportsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ImportDeclContext[] importDecl() {
			return GetRuleContexts<ImportDeclContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ImportDeclContext importDecl(int i) {
			return GetRuleContext<ImportDeclContext>(i);
		}
		public ImportsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_imports; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IKScrParserListener typedListener = listener as IKScrParserListener;
			if (typedListener != null) typedListener.EnterImports(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IKScrParserListener typedListener = listener as IKScrParserListener;
			if (typedListener != null) typedListener.ExitImports(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKScrParserVisitor<TResult> typedVisitor = visitor as IKScrParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitImports(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ImportsContext imports() {
		ImportsContext _localctx = new ImportsContext(Context, State);
		EnterRule(_localctx, 2, RULE_imports);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 185;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==IMPORT) {
				{
				{
				State = 182;
				importDecl();
				}
				}
				State = 187;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ImportDeclContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IMPORT() { return GetToken(KScrParser.IMPORT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public IdContext id() {
			return GetRuleContext<IdContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMICOLON() { return GetToken(KScrParser.SEMICOLON, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STATIC() { return GetToken(KScrParser.STATIC, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DOT() { return GetToken(KScrParser.DOT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STAR() { return GetToken(KScrParser.STAR, 0); }
		public ImportDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_importDecl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IKScrParserListener typedListener = listener as IKScrParserListener;
			if (typedListener != null) typedListener.EnterImportDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IKScrParserListener typedListener = listener as IKScrParserListener;
			if (typedListener != null) typedListener.ExitImportDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKScrParserVisitor<TResult> typedVisitor = visitor as IKScrParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitImportDecl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ImportDeclContext importDecl() {
		ImportDeclContext _localctx = new ImportDeclContext(Context, State);
		EnterRule(_localctx, 4, RULE_importDecl);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 188;
			Match(IMPORT);
			State = 190;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==STATIC) {
				{
				State = 189;
				Match(STATIC);
				}
			}

			State = 192;
			id();
			State = 195;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==DOT) {
				{
				State = 193;
				Match(DOT);
				State = 194;
				Match(STAR);
				}
			}

			State = 197;
			Match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AnnotationArgContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public IdPartContext idPart() {
			return GetRuleContext<IdPartContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ASSIGN() { return GetToken(KScrParser.ASSIGN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public AnnotationArgContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_annotationArg; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IKScrParserListener typedListener = listener as IKScrParserListener;
			if (typedListener != null) typedListener.EnterAnnotationArg(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IKScrParserListener typedListener = listener as IKScrParserListener;
			if (typedListener != null) typedListener.ExitAnnotationArg(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKScrParserVisitor<TResult> typedVisitor = visitor as IKScrParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAnnotationArg(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AnnotationArgContext annotationArg() {
		AnnotationArgContext _localctx = new AnnotationArgContext(Context, State);
		EnterRule(_localctx, 6, RULE_annotationArg);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 199;
			idPart();
			State = 200;
			Match(ASSIGN);
			State = 201;
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AnnotationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode AT() { return GetToken(KScrParser.AT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public IdContext id() {
			return GetRuleContext<IdContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(KScrParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(KScrParser.RPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public AnnotationArgContext[] annotationArg() {
			return GetRuleContexts<AnnotationArgContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public AnnotationArgContext annotationArg(int i) {
			return GetRuleContext<AnnotationArgContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMA() { return GetTokens(KScrParser.COMMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA(int i) {
			return GetToken(KScrParser.COMMA, i);
		}
		public AnnotationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_annotation; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IKScrParserListener typedListener = listener as IKScrParserListener;
			if (typedListener != null) typedListener.EnterAnnotation(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IKScrParserListener typedListener = listener as IKScrParserListener;
			if (typedListener != null) typedListener.ExitAnnotation(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKScrParserVisitor<TResult> typedVisitor = visitor as IKScrParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAnnotation(this);
			else return visitor.VisitChildren(this);
		}
	}
